--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="head">
+           <div class="logo">
+             <div class="left">
+              <h1>Book My Show</h1>
+             </div>
+             <div class="right">
+              <button>Movies</button>
+              <button>Events</button>
+              <button>Sports</button>
+              <button>More</button>
+             </div>
+           </div>
+           <div class="search">
+              <input type="text" class="searching" placeholder="search for movies events and sports">
+              <button>Search</button>
+           </div>
+        </div>
+    </header>
+    <div class="main">
+        <div class="hero">
+            <h2>Experience the Best Movies and Events</h2>
+            <button>Book Now</button>
+        </div>
+        
+    </div>
 </body>
 </html>
